Fixed infinite transfer bug Compatiable with Java 8