@@ -5,6 +5,7 @@ import com.leo.User.User;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -136,16 +137,16 @@ public class InputValidation {
     }
 
     public static int appendNewUserToLoginRecords(User user) throws IOException {
-        Path file = Path.of("Team4/src/com/leo/database/LoginRecords.csv");
+        Path file = Paths.get(System.getProperty("user.dir") + "Team4\\src\\com\\leo\\database\\LoginRecords.csv");
 
-        System.out.println(Files.writeString(file,
-        String.format("%d,%s,%s\n", user.index(ReadLoginRecords().size()), user.getLogin(), user.getPassword()),
+        System.out.println(Files.write(file,
+        String.format("%d,%s,%s\n", user.index(ReadLoginRecords().size()), user.getLogin(), user.getPassword()).getBytes(),
             StandardOpenOption.APPEND).toAbsolutePath());
         return user.getIndex();
     }
 
     public static ArrayList<String> ReadLoginRecords() throws IOException {
-        Path file = Path.of("Team4/src/com/leo/database/LoginRecords.csv");
+        Path file = Paths.get(System.getProperty("user.dir") + "Team4\\src\\com\\leo\\database\\LoginRecords.csv");
         ArrayList<String> buffer = new ArrayList<>();
         if(Files.isReadable(file))
             Files.lines(file).forEach(buffer::add);
@@ -153,16 +154,16 @@ public class InputValidation {
     }
 
     public static int appendNewUserToCheckingRecords(User user) throws IOException {
-        Path file = Path.of("Team4/src/com/leo/database/CheckingRecords.csv");
-        System.out.println(Files.writeString(file,
+        Path file = Paths.get(System.getProperty("user.dir") + "Team4\\src\\com\\leo\\database\\CheckingRecords.csv");
+        System.out.println(Files.write(file,
         String.format("%d,%s,%s,%s,%s,%s,%s,%s\n", user.index(ReadCheckingRecords().size()), user.getFirstName(), user.getLastName(), user.getPhoneNumber(),
-        user.getAddress(), user.getSalary(), user.getCheckingBalance(), user.getCreditScore()), StandardOpenOption.APPEND).toAbsolutePath());
+        user.getAddress(), user.getSalary(), user.getCheckingBalance(), user.getCreditScore()).getBytes(), StandardOpenOption.APPEND).toAbsolutePath());
         return user.getIndex();
     }
 
 
     public static ArrayList<String> ReadCheckingRecords() throws IOException {
-        Path file = Path.of("Team4/src/com/leo/database/CheckingRecords.csv");
+        Path file = Paths.get(System.getProperty("user.dir") + "Team4\\src\\com\\leo\\database\\CheckingRecords.csv");
         ArrayList<String> buffer = new ArrayList<>();
         if(Files.isReadable(file))
             Files.lines(file).forEach(buffer::add);
@@ -170,7 +171,7 @@ public class InputValidation {
     }
 
     public static User LoadUserData(int index) throws IOException {
-        Path file = Path.of("Team4/src/com/leo/database/CheckingRecords.csv");
+        Path file = Paths.get(System.getProperty("user.dir") + "Team4\\src\\com\\leo\\database\\CheckingRecords.csv");
         return new User(new ArrayList<>(Arrays.asList(Files.readAllLines(file).get(index).split(","))));
     }
 
